# Pi_pico_gesture_recognition

./: .gitignore  CMakeLists.txt  README.md
inc/: OLED_bitmap.h  main.h
model-parameters/: model_metadata.h  model_variables.h
src/: main.cpp  main_old.cpp
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
